--- a/Simulator.vcxproj
+++ b/Simulator.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Database.cpp" />
     <ClCompile Include="Detector.cpp" />
     <ClCompile Include="Event.cpp" />
+    <ClCompile Include="Logfile.cpp" />
     <ClCompile Include="Reader.cpp" />
     <ClCompile Include="RFID.cpp" />
     <ClCompile Include="Simulator.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="Database.h" />
     <ClInclude Include="Detector.h" />
     <ClInclude Include="Event.h" />
+    <ClInclude Include="Logfile.h" />
     <ClInclude Include="Reader.h" />
     <ClInclude Include="RFID.h" />
     <ClInclude Include="Tester.h" />
